--- a/style.css
+++ b/style.css
@@ -51,6 +51,51 @@
   width: 100%;
 }
 
+.searchbar {
+  display: flex;
+  align-items: center;
+  width: 180px;
+  padding: 4px;
+  border-radius: 30px;
+}
+
+.searchbar:hover {
+  background-color: #d6d6d6;
+}
+
+.searchbar input {
+  background: transparent;
+  width: 83%;
+  border: none;
+  outline: none;
+  font-size: 14px;
+  /*padding-left: 50px;
+  text-indent: 60px;*/
+}
+
+.searchbar:focus-within{
+  border: 1px solid #004b9b;
+  box-shadow: 0px 0px 0px 3px #b2c9e1;
+}
+
+
+.searchbar button {
+  cursor: pointer;
+  background: transparent;
+  padding: 6px;
+  border: none;
+  border-radius: 16px;
+  outline: none;
+}
+
+.searchbar button:hover {
+  background-color: white;
+}
+
+.searchbar button img {
+  height: 13px;
+}
+
 .main-container, .f-container {
   display: flex;
   justify-content: center;
